# home_engine

./: .gitignore  Makefile  README.md  Taskfile.yaml  docker-compose.yaml  software_quality.md
bengine/: Dockerfile  README.md  bun.lockb  package.json  seed.sql
curiosity/: .eslintrc.js  Dockerfile  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tailwind.config.js
db-init/: seed.sql
devi_sim/: .gitignore  README.md  config.yaml  mix.exs
fronthouse/: Dockerfile  bun.lockb  fly.toml  package-lock.json  package.json
hardwire/: Cargo.toml  Dockerfile  go.mod  main.go
hardwire/api/: transporter.go
hardwire/env/: env.go
hardwire/models/: AirDataMessage.go  DeviceHandshakeMessage.go  DeviceLWTMessage.go  DeviceMessage.go
hardwire/mqtt/: Handlers.go  Mqtt.go
hardwire/src/: main.rs
rpi/: deploy.sh
saercore/: .env.development  .gitignore  .prettierrc  CLAUDE.md  Makefile  README.md  drizzle.config.ts  eslint.config.js  go.mod  go.sum  main.go  mix.exs  package.json  saercore.db  sqlc.yaml  tsconfig.json
saerui/: package-lock.json  package.json  svelte.config.js  tailwind.config.js
transporter/: Cargo.toml  Dockerfile  package-lock.json  package.json  tsconfig.json
transporter/src/: config.ts  index.ts  main.rs
transporter/src/handlers/: mod.rs  sensor_air.rs  ws.rs
transporter/src/models/: Air.ts  air.ts  device.ts  deviceConnection.ts  index.ts
transporter/src/routes/: device.ts  deviceConnection.ts  sensorAir.ts
transporter/src/servers/: db.ts  http.ts  wss.ts
transporter/src/types/: data.rs
(+238 files in other folders)
