[package]
name = "hardwire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.20.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
