[package]
name = "transporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
uuid = { version = "0.4", features = ["serde", "v4"] }
futures = { version = "0.3", default-features = false }
