[package]
name = "transporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
uuid = { version = "0.4", features = ["serde", "v4"] }
axum = {version = "0.6.10",features = ["ws", "headers"]}
tower-http = {version = "0.4.0", features = ["cors", "trace"]}
headers = "0.3.8"
futures = "0.3.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
